# backend/patty/orm_models.py
@@ -16,7 +16,6 @@ from .new_orm_models import (
     AdaptationStrategySettings,
     BaseExercise,
     ClassificationBatch,
-    ClassificationStrategy,
     ExerciseClass,
     ExternalExercise,
     Extraction,
@@ -36,7 +35,6 @@ __all__ = [
     "AdaptationStrategySettings",
     "BaseExercise",
     "ClassificationBatch",
-    "ClassificationStrategy",
     "ExerciseClass",
     "ExternalExercise",
     "Extraction",
@@ -63,7 +61,6 @@ all_models: list[type[OrmBase]] = [
     AdaptationStrategySettings,
     BaseExercise,
     ClassificationBatch,
-    ClassificationStrategy,
     ExerciseClass,
     ExternalExercise,
     Extraction,
